--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -1,5 +1,8 @@
 .page-title{
-  font-size:22px;
+  max-width: 920px;
+  padding: 0 16px;
+  font-size: 22px;
+    position: relative;
   font-weight:800;
   margin: 10px 0 16px;
 }
@@ -63,15 +66,6 @@
   background:#000;
   color:#fff;
 }
-.page-title{
-  max-width: 920px;
-  margin: 22px auto 12px;
-  padding: 0 16px;
-  font-size: 22px;
-  font-weight: 900;
-  position: relative;
-}
-
 .page-title::before{
   content:"";
   display:inline-block;
@@ -251,7 +245,6 @@
   color:#666;
   font-weight: 800;
 }
-
 /* スマホ */
 @media (max-width: 720px){
   .account-top{
